syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "Common.proto";

option java_multiple_files = true;
option java_package = "com.robsil.proto";
option java_outer_classname = "CategoryProto";

service CategoryService {

}
